_notes/errbyfile/O00000OOO00O.java.txt
ru\metaculture\protection\O00000OOO00O.java:251: error: incompatible 
types: Object cannot be converted to O00000OOO0O00O
         for (O00000OOO0O00O var5 : var2) {
                                    ^

ru\metaculture\protection\O00000OOO00O.java:265: error: reference to 
thenComparing is ambiguous
         var2.sort(Comparator.comparing(O00000OOO0O00O::O0000000000).thenComparing(O00000OOO0O00O::O000000000));
                                                                    ^
  both method thenComparing(Comparator<? super T>) in Comparator and method <U>thenComparing(Function<? super T,? 
extends U>) in Comparator match
  where T,U are type-variables:
    T extends Object declared in interface Comparator
    U extends Comparable<? super U> declared in method <U>thenComparing(Function<? super T,? extends U>)

ru\metaculture\protection\O00000OOO00O.java:265: error: incompatible 
types: invalid method reference
         var2.sort(Comparator.comparing(O00000OOO0O00O::O0000000000).thenComparing(O00000OOO0O00O::O000000000));
                                                                                   ^
    incompatible types: O00000OOO0O00O cannot be converted to String

ru\metaculture\protection\O00000OOO00O.java:267: error: incompatible 
types: Object cannot be converted to O00000OOO0O00O
         for (O00000OOO0O00O var12 : var2) {
                                     ^

ru\metaculture\protection\O00000OOO00O.java:271: error: incompatible 
types: Object cannot be converted to O00000OOO0O00O
         for (O00000OOO0O00O var13 : var2) {
                                     ^

ru\metaculture\protection\O00000OOO00O.java:284: error: incompatible 
types: Object cannot be converted to W300
      for (O00000OOO00O0.W300 var16 : var8) {
                                      ^

  ru\metaculture\protection\O00000OOO00O.java:265: error: reference to 
thenComparing is ambiguous
           var2.sort(Comparator.comparing(O00000OOO0O00O::O0000000000).thenComparing(O00000OOO0O00O::O000000000));
                                                                      ^
    both method thenComparing(Comparator<? super T>) in Comparator and method <U>thenComparing(Function<? super T,? 
extends U>) in Comparator match
    where T,U are type-variables:
      T extends Object declared in interface Comparator
      U extends Comparable<? super U> declared in method <U>thenComparing(Function<? super T,? extends U>)

  ru\metaculture\protection\O00000OOO00O.java:251: error: incompatible 
types: Object cannot be converted to O00000OOO0O00O
           for (O00000OOO0O00O var5 : var2) {
                                      ^

  ru\metaculture\protection\O00000OOO00O.java:265: error: incompatible 
types: invalid method reference
           var2.sort(Comparator.comparing(O00000OOO0O00O::O0000000000).thenComparing(O00000OOO0O00O::O000000000));
                                                                                     ^
      incompatible types: O00000OOO0O00O cannot be converted to String

  ru\metaculture\protection\O00000OOO00O.java:267: error: incompatible 
types: Object cannot be converted to O00000OOO0O00O
           for (O00000OOO0O00O var12 : var2) {
                                       ^

  ru\metaculture\protection\O00000OOO00O.java:271: error: incompatible 
types: Object cannot be converted to O00000OOO0O00O
           for (O00000OOO0O00O var13 : var2) {
                                       ^

  ru\metaculture\protection\O00000OOO00O.java:284: error: incompatible 
types: Object cannot be converted to W300
        for (O00000OOO00O0.W300 var16 : var8) {
                                        ^
